--- a/thule-shared/build.gradle
+++ b/thule-shared/build.gradle
@@ -41,6 +41,9 @@ subprojects {
 project("thule-spring-boot-starter") {
     description = "Thule Spring Boot Starter Utils"
     dependencies {
+        annotationProcessor("org.projectlombok:lombok")
+        compileOnly("org.projectlombok:lombok")
+
         compile project(":thule-utils")
 
         compileOnly("org.springframework.data:spring-data-jpa")
@@ -53,6 +56,9 @@ project("thule-spring-boot-starter") {
 project("thule-spring-boot-starter-oauth2") {
     description = "Thule Spring Boot Starter Oauth2"
     dependencies {
+        annotationProcessor("org.projectlombok:lombok")
+        compileOnly("org.projectlombok:lombok")
+
         compile project(":thule-spring-boot-starter")
         compile("org.springframework.cloud:spring-cloud-starter-oauth2")
 
@@ -63,6 +69,9 @@ project("thule-spring-boot-starter-oauth2") {
 project("thule-spring-boot-starter-oauth2-test") {
     description = "Thule Spring Boot Starter Oauth2 Test"
     dependencies {
+        annotationProcessor("org.projectlombok:lombok")
+        compileOnly("org.projectlombok:lombok")
+        
         compile project(":thule-spring-boot-starter")
         compile project(":thule-spring-boot-starter-test")
         compile("org.springframework.security:spring-security-test")
@@ -77,7 +86,6 @@ project("thule-spring-boot-starter-test") {
         compile("org.springframework.boot:spring-boot-starter-test")
         compile("org.springframework.cloud:spring-cloud-contract-wiremock")
         compile("org.springframework.restdocs:spring-restdocs-mockmvc")
-        compile("pl.pojo:pojo-tester:0.7.6") // Remove once we have moved to lombok
     }
 }
 
@@ -97,7 +105,6 @@ project("thule-test") {
         compileOnly("org.springframework.cloud:spring-cloud-starter-oauth2")
 
         testCompile("org.springframework.cloud:spring-cloud-starter-oauth2")
-        testCompile("pl.pojo:pojo-tester:0.7.6")
     }
 }
 
