Upgraded spring cloud from greenwich.release to greenwich.sr1

--- a/thule-configuration/build.gradle
+++ b/thule-configuration/build.gradle
@@ -82,7 +82,7 @@ project("thule-configuration-service") {
     // Dependencies
     dependencyManagement {
         imports {
-            mavenBom("org.springframework.cloud:spring-cloud-dependencies:Greenwich.RELEASE")
+            mavenBom("org.springframework.cloud:spring-cloud-dependencies:Greenwich.SR1")
         }
     }
 
