--- a/thule-discovery/build.gradle
+++ b/thule-discovery/build.gradle
@@ -45,7 +45,7 @@ project("thule-discovery-service") {
     // Dependencies
     dependencyManagement {
         imports {
-            mavenBom("org.springframework.cloud:spring-cloud-dependencies:Greenwich.RELEASE")
+            mavenBom("org.springframework.cloud:spring-cloud-dependencies:Greenwich.SR1")
         }
     }
 
