--- a/thule-email/build.gradle
+++ b/thule-email/build.gradle
@@ -47,7 +47,7 @@ project("thule-email-service") {
     // Dependencies
     dependencyManagement {
         imports {
-            mavenBom("org.springframework.cloud:spring-cloud-dependencies:Greenwich.RELEASE")
+            mavenBom("org.springframework.cloud:spring-cloud-dependencies:Greenwich.SR1")
         }
     }
     
