--- a/thule-people/build.gradle
+++ b/thule-people/build.gradle
@@ -57,7 +57,7 @@ project("thule-people-service") {
     // Dependencies
     dependencyManagement {
         imports {
-            mavenBom("org.springframework.cloud:spring-cloud-dependencies:Greenwich.RELEASE")
+            mavenBom("org.springframework.cloud:spring-cloud-dependencies:Greenwich.SR1")
         }
     }
 
