--- a/thule-discovery/build.gradle
+++ b/thule-discovery/build.gradle
@@ -3,10 +3,14 @@ buildscript {
         maven { url "http://${nexusHost}:${nexusPort}/repository/maven-public" }
         mavenLocal()
     }
+
+    dependencies {
+        classpath("uk.co.serin.gradle.plugins:sonarqube-build-breaker-plugin:1.0.0-SNAPSHOT")
+    }
 }
 
 plugins {
-    id "com.github.ben-manes.versions" version "0.21.0" // Let it apply by default so that the plugin consolidates at the root of the project, otherwise it often hangs when checking dependency versions
+    id "com.github.ben-manes.versions" version "0.21.0" // Let it apply by default so that the plugin consolidates at the root of the project
     id "com.palantir.docker" version "0.21.0" apply(false)
     id "org.sonarqube" version "2.7" apply(false)
     id "org.springframework.boot" version "2.1.4.RELEASE" apply(false)
@@ -36,6 +40,7 @@ project("thule-discovery-service") {
     apply plugin: "org.sonarqube"
     apply plugin: "org.springframework.boot"
     apply plugin: "maven-publish"
+    apply plugin: "uk.co.serin.gradle.plugins.sonarqube-build-breaker"
 
     // Standard Thule gradle plugin config
     apply from: "${rootDir}/../gradle/build-config.gradle"
