--- a/thule-repository-mongodb/build.gradle
+++ b/thule-repository-mongodb/build.gradle
@@ -3,6 +3,10 @@ buildscript {
         maven { url "http://${nexusHost}:${nexusPort}/repository/maven-public" }
         mavenLocal()
     }
+
+    dependencies {
+        classpath("uk.co.serin.gradle.plugins:sonarqube-build-breaker-plugin:1.0.0-SNAPSHOT")
+    }
 }
 
 plugins {
@@ -17,6 +21,7 @@ apply plugin: "io.spring.dependency-management"
 
 // Standard Serin gradle plugin config
 apply from: "${rootDir}/../gradle/build-config.gradle"
+apply plugin: "uk.co.serin.gradle.plugins.sonarqube-build-breaker"
 
 // Non-standard Serin gradle plugin config
 
