--- a/thule-email/build.gradle
+++ b/thule-email/build.gradle
@@ -14,7 +14,7 @@ plugins {
     id "com.palantir.docker" version "0.22.1" apply(false)
     id "org.asciidoctor.convert" version "1.6.0" apply(false)
     id "org.sonarqube" version "2.7.1" apply(false)
-    id "org.springframework.boot" version "2.1.5.RELEASEE" apply(false)
+    id "org.springframework.boot" version "2.1.5.RELEASE" apply(false)
 }
 
 project("thule-email-config") {
