--- a/thule-environment-provisioning/src/main/docker-compose/environments/cit/docker-compose.yml
+++ b/thule-environment-provisioning/src/main/docker-compose/environments/cit/docker-compose.yml
@@ -1,4 +1,4 @@
-version: "3.1"
+version: "3.7"
 services:
   ################################  thule-admin-service  ################################
   thule-admin-service:
@@ -7,6 +7,12 @@ services:
       JDK_JAVA_OPTIONS: -XX:InitialHeapSize=256m -XX:MaxHeapSize=256m -XX:MaxMetaspaceSize=256m
       SPRING_PROFILES_ACTIVE: cit
       TZ: Europe/London
+    healthcheck:
+      test: curl --fail -s http://localhost:8080/actuator/health || exit 1
+      interval: 10s
+      retries: 3
+      start_period: 1m
+      timeout: 10s
     logging:
       driver: json-file
       options:
@@ -23,6 +29,12 @@ services:
       JDK_JAVA_OPTIONS: -XX:InitialHeapSize=256m -XX:MaxHeapSize=256m -XX:MaxMetaspaceSize=256m
       SPRING_PROFILES_ACTIVE: cit
       TZ: Europe/London
+    healthcheck:
+      test: curl --fail -s http://localhost:8080/actuator/health || exit 1
+      interval: 10s
+      retries: 3
+      start_period: 1m
+      timeout: 10s
     logging:
       driver: json-file
       options:
@@ -41,6 +53,12 @@ services:
       JDK_JAVA_OPTIONS: -XX:InitialHeapSize=256m -XX:MaxHeapSize=256m -XX:MaxMetaspaceSize=256m
       SPRING_PROFILES_ACTIVE: cit
       TZ: Europe/London
+    healthcheck:
+      test: curl --fail -s http://localhost:8080/actuator/health || exit 1
+      interval: 10s
+      retries: 3
+      start_period: 1m
+      timeout: 10s
     logging:
       driver: json-file
       options:
@@ -57,6 +75,12 @@ services:
       JDK_JAVA_OPTIONS: -XX:InitialHeapSize=256m -XX:MaxHeapSize=256m -XX:MaxMetaspaceSize=256m
       SPRING_PROFILES_ACTIVE: cit
       TZ: Europe/London
+    healthcheck:
+      test: curl --fail -s http://localhost:8080/actuator/health || exit 1
+      interval: 10s
+      retries: 3
+      start_period: 1m
+      timeout: 10s
     logging:
       driver: json-file
       options:
@@ -73,6 +97,12 @@ services:
       JDK_JAVA_OPTIONS: -XX:InitialHeapSize=256m -XX:MaxHeapSize=256m -XX:MaxMetaspaceSize=256m
       SPRING_PROFILES_ACTIVE: cit
       TZ: Europe/London
+    healthcheck:
+      test: curl --fail -s http://localhost:8080/actuator/health || exit 1
+      interval: 10s
+      retries: 3
+      start_period: 1m
+      timeout: 10s
     logging:
       driver: json-file
       options:
@@ -89,6 +119,12 @@ services:
       JDK_JAVA_OPTIONS: -XX:InitialHeapSize=256m -XX:MaxHeapSize=256m -XX:MaxMetaspaceSize=256m
       SPRING_PROFILES_ACTIVE: cit
       TZ: Europe/London
+    healthcheck:
+      test: curl --fail -s http://localhost:8080/actuator/health || exit 1
+      interval: 10s
+      retries: 3
+      start_period: 1m
+      timeout: 10s
     logging:
       driver: json-file
       options:
