--- a/thule-discovery/thule-discovery-config/src/main/resources/config/application-ctest.yml
+++ b/thule-discovery/thule-discovery-config/src/main/resources/config/application-ctest.yml
@@ -1,11 +1,8 @@
 # Eureka configuration
 eureka:
-  client:
-    fetch-registry: true
-    registerWithEureka: true # Register discovery service itself with Eureka so we have a client service available for the integration tests
-    serviceUrl:
-      defaultZone: http://localhost:${server.port:8080}/eureka/
   instance:
+    fetch-registry: false
+    registerWithEureka: false # Register discovery service itself with Eureka so we have a client service available for the integration tests
     # By default eureka server can take a long time to start due to the default lease renewal of 30 seconds
     leaseRenewalIntervalInSeconds: 5
 
