--- a/thule-gateway/thule-gateway-config/src/main/resources/config/application-ctest.yml
+++ b/thule-gateway/thule-gateway-config/src/main/resources/config/application-ctest.yml
@@ -7,3 +7,12 @@ eureka:
 logging:
   level:
     uk.co.serin.thule: trace
+
+# Thule configuration
+thule:
+  gatewayservice:
+    healthcheck:
+      services:
+        - "thule-discovery-service"
+        - "thule-configuration-service"
+        - "thule-admin-service"
