--- a/thule-environment-provisioning/src/main/kubernetes/environments/cit/services/thule-configuration-service.yml
+++ b/thule-environment-provisioning/src/main/kubernetes/environments/cit/services/thule-configuration-service.yml
@@ -29,6 +29,7 @@ spec:
               path: /actuator/health
               port: service-port
             initialDelaySeconds: 300
+            periodSeconds: 30
             timeoutSeconds: 10
           ports:
             - containerPort: 8080
@@ -37,6 +38,7 @@ spec:
             httpGet:
               path: /actuator/health
               port: service-port
+            periodSeconds: 30
             timeoutSeconds: 10
           volumeMounts:
             - name: config
