--- a/thule-environment-provisioning/src/main/kubernetes/environments/cit/services/thule-people-service.yml
+++ b/thule-environment-provisioning/src/main/kubernetes/environments/cit/services/thule-people-service.yml
@@ -31,6 +31,7 @@ spec:
               path: /actuator/health
               port: service-port
             initialDelaySeconds: 300
+            periodSeconds: 30
             timeoutSeconds: 10
           ports:
             - containerPort: 8080
@@ -39,6 +40,7 @@ spec:
             httpGet:
               path: /actuator/health
               port: service-port
+            periodSeconds: 30
             timeoutSeconds: 10
         - name: mysql-people-service
           image: mysql
