--- a/thule-environment-provisioning/src/main/kubernetes/environments/cit/services/thule-admin-service.yml
+++ b/thule-environment-provisioning/src/main/kubernetes/environments/cit/services/thule-admin-service.yml
@@ -40,6 +40,15 @@ spec:
               port: service-port
             periodSeconds: 30
             timeoutSeconds: 10
+      tolerations:
+        - key: node.kubernetes.io/not-ready
+            operator: Exists
+            effect: NoExecute
+            tolerationSeconds: 600
+        - key: node.kubernetes.io/unreachable
+            operator: Exists
+            effect: NoExecute
+            tolerationSeconds: 600
 ---
 apiVersion: v1
 kind: Service
