--- a/thule-environment-provisioning/src/main/kubernetes/environments/cit/services/thule-configuration-service.yml
+++ b/thule-environment-provisioning/src/main/kubernetes/environments/cit/services/thule-configuration-service.yml
@@ -43,6 +43,15 @@ spec:
           volumeMounts:
             - name: config
               mountPath: /config
+      tolerations:
+        - key: node.kubernetes.io/not-ready
+            operator: Exists
+            effect: NoExecute
+            tolerationSeconds: 600
+        - key: node.kubernetes.io/unreachable
+            operator: Exists
+            effect: NoExecute
+            tolerationSeconds: 600
       volumes:
         - name: config
           hostPath:
