Polished provisioning scripts

--- a/thule-environment-provisioning/src/main/kubernetes/environments/cit/services/thule-configuration-service.yml
+++ b/thule-environment-provisioning/src/main/kubernetes/environments/cit/services/thule-configuration-service.yml
@@ -44,14 +44,7 @@ spec:
             - name: config
               mountPath: /config
       tolerations:
-        - key: node.kubernetes.io/not-ready
-          operator: Exists
-          effect: NoExecute
-          tolerationSeconds: 600
-        - key: node.kubernetes.io/unreachable
-          operator: Exists
-          effect: NoExecute
-          tolerationSeconds: 600
+        - operator: Exists
       volumes:
         - name: config
           hostPath:
