--- a/thule-environment-provisioning/src/main/kubernetes/environments/cit/services/thule-discovery-service.yml
+++ b/thule-environment-provisioning/src/main/kubernetes/environments/cit/services/thule-discovery-service.yml
@@ -41,14 +41,7 @@ spec:
             periodSeconds: 30
             timeoutSeconds: 10
       tolerations:
-        - key: node.kubernetes.io/not-ready
-          operator: Exists
-          effect: NoExecute
-          tolerationSeconds: 600
-        - key: node.kubernetes.io/unreachable
-          operator: Exists
-          effect: NoExecute
-          tolerationSeconds: 600
+        - operator: Exists
 ---
 apiVersion: v1
 kind: Service
