Changed default logstash server from 192.168.0.102 to pooh

--- a/thule-environment-provisioning/src/main/kubernetes/environments/cit/services/thule-configuration-service.yml
+++ b/thule-environment-provisioning/src/main/kubernetes/environments/cit/services/thule-configuration-service.yml
@@ -43,6 +43,10 @@ spec:
           volumeMounts:
             - name: config
               mountPath: /config
+      hostAliases:
+        - ip: 192.168.0.102
+          hostnames:
+            - pooh
       tolerations:
         - operator: Exists
       volumes:
