--- a/thule-environment-provisioning/src/main/kubernetes/environments/cit/services/thule-gateway-service.yml
+++ b/thule-environment-provisioning/src/main/kubernetes/environments/cit/services/thule-gateway-service.yml
@@ -40,6 +40,10 @@ spec:
               port: service-port
             periodSeconds: 30
             timeoutSeconds: 10
+      hostAliases:
+        - ip: 192.168.0.102
+          hostnames:
+            - pooh
       tolerations:
         - operator: Exists
 ---
