--- a/thule-environment-provisioning/src/main/kubernetes/environments/cit/services/thule-people-service.yml
+++ b/thule-environment-provisioning/src/main/kubernetes/environments/cit/services/thule-people-service.yml
@@ -51,6 +51,10 @@ spec:
               value: Europe/London
           ports:
             - containerPort: 3306
+      hostAliases:
+        - ip: 192.168.0.102
+          hostnames:
+            - pooh
       tolerations:
         - operator: Exists
 ---
