Disabled logstash logging for ctest and itest tests

--- a/thule-discovery/thule-discovery-config/src/main/resources/config/application-ctest.yml
+++ b/thule-discovery/thule-discovery-config/src/main/resources/config/application-ctest.yml
@@ -10,3 +10,10 @@ eureka:
 logging:
   level:
     uk.co.serin.thule: trace
+
+# Thule configuration
+thule:
+  shared:
+    logging:
+      logstash:
+        enabled: false
