--- a/thule-email/thule-email-config/src/main/resources/config/application-ctest.yml
+++ b/thule-email/thule-email-config/src/main/resources/config/application-ctest.yml
@@ -3,3 +3,10 @@ spring:
   mail:
     host: localhost
     port: 1025
+
+# Thule configuration
+thule:
+  shared:
+    logging:
+      logstash:
+        enabled: false
