--- a/thule-gateway/thule-gateway-config/src/main/resources/config/application-ctest.yml
+++ b/thule-gateway/thule-gateway-config/src/main/resources/config/application-ctest.yml
@@ -16,3 +16,7 @@ thule:
         - "thule-discovery-service"
         - "thule-configuration-service"
         - "thule-admin-service"
+  shared:
+    logging:
+      logstash:
+        enabled: false
