--- a/thule-people/thule-people-config/src/main/resources/config/application-itest.yml
+++ b/thule-people/thule-people-config/src/main/resources/config/application-itest.yml
@@ -20,6 +20,10 @@ thule:
     mysql:
       host: localhost
       port: 3307 # Use 3306 for dev, 3307 for itest and 3308 for ctest so they can all execute simultaneously if required
+  shared:
+    logging:
+      logstash:
+        enabled: false
 
 ######################################### NESTED INTEGRATION TEST PROFILES #######################################
 ---
