--- a/thule-admin/thule-admin-config/src/main/resources/config/application-itest.yml
+++ b/thule-admin/thule-admin-config/src/main/resources/config/application-itest.yml
@@ -7,3 +7,10 @@ eureka:
 logging:
   level:
     uk.co.serin.thule: trace
+
+# Thule configuration
+thule:
+  shared:
+    logging:
+      logstash:
+        enabled: false
