--- a/thule-admin/thule-admin-service/src/dtest/docker/thule-admin-docker-tests/docker-compose.yml
+++ b/thule-admin/thule-admin-service/src/dtest/docker/thule-admin-docker-tests/docker-compose.yml
@@ -10,6 +10,7 @@ services:
       # Since we are not using the configuration service to provide spring config, we instruct spring to use the config
       # from a docker volume created at build time which contains the source for this micro-service
       SPRING_CONFIG_ADDITIONAL_LOCATION: /thule-admin/thule-admin-config/src/main/resources/config/
+      THULE_SHARED_LOGGING_LOGSTASH_ENABLED: false
       TZ: Europe/London
     ports:
       - 9093:8080 # Required to allow docker tests to call the restful api
