--- a/thule-gateway/thule-gateway-service/src/dtest/docker/thule-gateway-docker-tests/docker-compose.yml
+++ b/thule-gateway/thule-gateway-service/src/dtest/docker/thule-gateway-docker-tests/docker-compose.yml
@@ -10,7 +10,7 @@ services:
       # Since we are not using the configuration service to provide spring config, we instruct spring to use the config
       # from a docker volume created at build time which contains the source for this micro-service
       SPRING_CONFIG_ADDITIONAL_LOCATION: /thule-gateway/thule-gateway-config/src/main/resources/config/
-      THULE_GATEWAYSERVICE_HEALTHCHECK_SERVICES: "" # Intentionally empty
+      THULE_SHARED_LOGGING_LOGSTASH_ENABLED: false
       TZ: Europe/London
     ports:
       - 9091:8080 # Required to allow docker tests to call the restful api
