Disabled zipkin logging for itest, ctest and dtest tests

--- a/thule-discovery/thule-discovery-config/src/main/resources/config/application-ctest.yml
+++ b/thule-discovery/thule-discovery-config/src/main/resources/config/application-ctest.yml
@@ -11,6 +11,11 @@ logging:
   level:
     uk.co.serin.thule: trace
 
+# Spring boot configuration
+spring:
+  zipkin:
+    enabled: false
+
 # Thule configuration
 thule:
   shared:
