--- a/thule-configuration/thule-configuration-config/src/main/resources/config/application-ctest.yml
+++ b/thule-configuration/thule-configuration-config/src/main/resources/config/application-ctest.yml
@@ -8,6 +8,11 @@ logging:
   level:
     uk.co.serin.thule: trace
 
+# Spring boot configuration
+spring:
+  zipkin:
+    enabled: false
+
 # Thule configuration
 thule:
   shared:
