--- a/thule-discovery/thule-discovery-config/src/main/resources/config/application-itest.yml
+++ b/thule-discovery/thule-discovery-config/src/main/resources/config/application-itest.yml
@@ -9,6 +9,11 @@ logging:
   level:
     uk.co.serin.thule: trace
 
+# Spring boot configuration
+spring:
+  zipkin:
+    enabled: false
+
 # Thule configuration
 thule:
   shared:
