--- a/thule-discovery/thule-discovery-service/src/dtest/docker/thule-discovery-docker-tests/docker-compose.yml
+++ b/thule-discovery/thule-discovery-service/src/dtest/docker/thule-discovery-docker-tests/docker-compose.yml
@@ -10,6 +10,7 @@ services:
       # Since we are not using the configuration service to provide spring config, we instruct spring to use the config
       # from a docker volume created at build time which contains the source for this micro-service
       SPRING_CONFIG_ADDITIONAL_LOCATION: /thule-discovery/thule-discovery-config/src/main/resources/config/
+      SPRING_ZIPKIN_ENABLED: "false"
       THULE_SHARED_LOGGING_LOGSTASH_ENABLED: "false"
       TZ: Europe/London
     ports:
