--- a/thule-email/thule-email-config/src/main/resources/config/application.yml
+++ b/thule-email/thule-email-config/src/main/resources/config/application.yml
@@ -47,6 +47,10 @@ spring:
   sleuth:
     sampler:
       probability: 1.0
+  zipkin:
+    base-url: http://pooh:9411
+    sender:
+      type: web
 
 # Thule configuration
 thule:
