--- a/thule-gateway/thule-gateway-config/src/main/resources/config/application.yml
+++ b/thule-gateway/thule-gateway-config/src/main/resources/config/application.yml
@@ -39,6 +39,10 @@ spring:
   sleuth:
     sampler:
       probability: 1.0
+  zipkin:
+    base-url: http://pooh:9411
+    sender:
+      type: web
 
 # Zuul configuration
 zuul:
