Jacoco now creates an xml report file that is required by SonarQube

--- a/gradle/plugin-jacoco-config.gradle
+++ b/gradle/plugin-jacoco-config.gradle
@@ -33,6 +33,12 @@ if (project.tasks.findByName("jacocoTestReport")) {
     }
     jacoco.toolVersion = "0.8.5"
 
+    jacocoTestReport {
+        reports {
+            xml.enabled true
+        }
+    }
+
     // Always run jacoco after running the unit tests
     test.finalizedBy jacocoTestReport
 }
