--- a/thule-admin-service/src/main/resources/config/application-ctest.yml
+++ b/thule-admin-service/src/main/resources/config/application-ctest.yml
@@ -10,6 +10,10 @@ logging:
 
 # Spring boot configuration
 spring:
+  cloud:
+    kubernetes:
+      discovery:
+        enabled: false
   zipkin:
     enabled: false
 
