--- a/thule-environment-provisioning/src/main/kubernetes/environments/cit/services/thule-admin-service.yml
+++ b/thule-environment-provisioning/src/main/kubernetes/environments/cit/services/thule-admin-service.yml
@@ -17,6 +17,7 @@ spec:
       containers:
         - name: thule-admin-service
           image: pooh:8082/thule-admin-service:1.0.0-SNAPSHOT
+          imagePullPolicy: Always
           env:
             - name: JDK_JAVA_OPTIONS
               value: -XX:InitialHeapSize=256m -XX:MaxHeapSize=256m -XX:MaxMetaspaceSize=256m
