--- a/thule-admin-service/src/dtest/docker/thule-admin-docker-tests/docker-compose.yml
+++ b/thule-admin-service/src/dtest/docker/thule-admin-docker-tests/docker-compose.yml
@@ -5,6 +5,7 @@ services:
     image: pooh:8084/thule-admin-service
     environment:
       EUREKA_CLIENT_ENABLED: "false" # Docker tests do not need a discovery registry
+      SPRING_CLOUD_KUBERNETES_DISCOVERY_ENABLED: "false" # Docker tests do not need a discovery registry
       JDK_JAVA_OPTIONS: -XX:InitialHeapSize=256m -XX:MaxHeapSize=256m -XX:MaxMetaspaceSize=256m
       SPRING_CLOUD_CONFIG_ENABLED: "false" # Docker tests do not need a configuration service
       # Since we are not using the configuration service to provide spring config, we instruct spring to use the config
