--- a/thule-environment-provisioning/src/main/kubernetes/environments/cit/services/thule-people-service.yml
+++ b/thule-environment-provisioning/src/main/kubernetes/environments/cit/services/thule-people-service.yml
@@ -2,7 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: thule-people-service
-  namespace: default
+  namespace: thule
   labels:
     app: thule-people-service
 spec:
@@ -63,7 +63,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: thule-people-service
-  namespace: default
+  namespace: thule
   labels:
     app: thule-people-service
 spec:
