Added support for kubernetes service discovery

--- a/thule-email-service/src/main/resources/bootstrap-cit.yml
+++ b/thule-email-service/src/main/resources/bootstrap-cit.yml
@@ -3,8 +3,6 @@ spring:
   cloud:
     config:
       enabled: true
-
-# Thule configuration
-thule:
-  configurationservice:
-    host: thule-configuration-service
+    kubernetes:
+      discovery:
+        enabled: true
