--- a/thule-email-service/build.gradle
+++ b/thule-email-service/build.gradle
@@ -53,8 +53,7 @@ dependencies {
     compile("org.springframework.cloud:spring-cloud-starter-kubernetes")
     compile("org.springframework.cloud:spring-cloud-starter-sleuth")
     compile("org.springframework.cloud:spring-cloud-starter-zipkin")
-    compile("org.springframework.retry:spring-retry")
-    // Required to retry connecting to the configuration service when it is not available at startup
+    compile("org.springframework.retry:spring-retry") // Required to retry connecting to the configuration service when it is not available at startup
 
     testCompile("uk.co.serin.thule:thule-spring-boot-starter-oauth2-test:${thuleSharedVersion}")
     testCompile("uk.co.serin.thule:thule-spring-boot-starter-test:${thuleSharedVersion}")
