--- a/thule-email-service/src/main/resources/config/application-cit.yml
+++ b/thule-email-service/src/main/resources/config/application-cit.yml
@@ -1,10 +1,8 @@
-# Eureka configuration
-eureka:
-  client:
-    enabled: true
+# Spring boot configuration
+spring:
+  cloud:
+    kubernetes:
+      discovery:
+        enabled: true
 
 # Thule configuration
-thule:
-  discoveryservice:
-    host: thule-discovery-service
-
