--- a/thule-email-service/src/main/resources/config/application.yml
+++ b/thule-email-service/src/main/resources/config/application.yml
@@ -1,14 +1,3 @@
-# Eureka configuration
-eureka:
-  client:
-    enabled: false # Most environments (test) do no need a discovery service so it is disabled by default
-    serviceUrl:
-      # Location of peer discovery services to keep the registry in sync across all discovery services, in this case we only have a single node so it refers to itself
-      defaultZone: http://${thule.discoveryservice.host:localhost}:${thule.discoveryservice.port:8080}/eureka/
-  instance:
-    # Hostname will be the docker container hostname by default which will not will not be accessible outside of the host itself, so use ipaddress instead
-    prefer-ip-address: true
-
 # Spring actuator configuration
 info:
   description: Thule Email Service
@@ -34,6 +23,10 @@ management:
 spring:
   application:
     name: thule-email-service
+  cloud:
+    kubernetes:
+      discovery:
+        enabled: false
   mail:
     host: smtp.gmail.com
     password: 1nsleyopie
