Added support for kubernetes service discovery

--- a/thule-repository-mongodb/src/main/resources/config/application.yml
+++ b/thule-repository-mongodb/src/main/resources/config/application.yml
@@ -2,7 +2,7 @@
 logging:
   level:
     org.springframework: info
-    uk.co.serin: trace
+    uk.co.serin.thule: trace
 
 # Spring configuration
 spring:
