Added support for kubernetes service discovery

--- a/thule-people-service/src/main/resources/config/application-cit.yml
+++ b/thule-people-service/src/main/resources/config/application-cit.yml
@@ -1,11 +1,9 @@
-# Spring logging
-logging:
-  level:
-    jdbc.sqlonly: info
-    uk.co.serin: trace
-
 # Spring boot configuration
 spring:
+  cloud:
+    kubernetes:
+      discovery:
+        enabled: true
   flyway:
     schemas: thule
 
