--- a/thule-people-service/src/main/resources/config/application.yml
+++ b/thule-people-service/src/main/resources/config/application.yml
@@ -1,13 +1,3 @@
-# Eureka configuration
-eureka:
-  client:
-    serviceUrl:
-      # Location of peer discovery services to keep the registry in sync across all discovery services, in this case we only have a single node so it refers to itself
-      defaultZone: http://${thule.discoveryservice.host:thule-discovery-service}:${thule.discoveryservice.port:8080}/eureka/
-  instance:
-    # Hostname will be the docker container hostname by default which will not will not be accessible outside of the host itself, so use ipaddress instead
-    prefer-ip-address: true
-
 # Spring actuator configuration
 info:
   description: Thule People Service
@@ -22,7 +12,7 @@ logging:
     jdbc.sqlonly: error
     jdbc.sqltiming: error
     org.springframework: info
-    uk.co.serin: trace
+    uk.co.serin.thule: trace
 
 # Management endpoint configuration
 management:
@@ -38,6 +28,10 @@ management:
 spring:
   application:
     name: thule-people-service
+  cloud:
+    kubernetes:
+      discovery:
+        enabled: false
   datasource:
     driver-class-name: net.sf.log4jdbc.DriverSpy
     hikari:
