Added support for kubernetes service discovery

--- a/thule-configuration-service/src/main/resources/bootstrap-cit.yml
+++ b/thule-configuration-service/src/main/resources/bootstrap-cit.yml
@@ -1,8 +1,6 @@
-# Spring boot configuration
+# Spring cloud configuration
 spring:
   cloud:
     kubernetes:
       discovery:
         enabled: true
-
-# Thule configuration
