--- a/thule-people-service/src/main/resources/config/application.yml
+++ b/thule-people-service/src/main/resources/config/application.yml
@@ -32,6 +32,8 @@ spring:
     kubernetes:
       discovery:
         enabled: false
+      ribbon:
+        enabled: false
   datasource:
     driver-class-name: net.sf.log4jdbc.DriverSpy
     hikari:
