--- a/thule-discovery-service/src/main/resources/config/application.yml
+++ b/thule-discovery-service/src/main/resources/config/application.yml
@@ -15,8 +15,8 @@ info:
 # Spring logging
 logging:
   level:
-    uk.co.serin.thule: info
     org.springframework: info
+    uk.co.serin.thule: trace
 
 # Management endpoint configuration
 management:
