Added support for kubernetes service discovery

--- a/thule-admin-service/src/main/resources/config/application.yml
+++ b/thule-admin-service/src/main/resources/config/application.yml
@@ -27,6 +27,10 @@ spring:
     kubernetes:
       discovery:
         enabled: false
+      reload:
+        enabled: true
+        mode: polling
+        period: 5000
   sleuth:
     sampler:
       probability: 1.0
