--- a/thule-gateway-service/build.gradle
+++ b/thule-gateway-service/build.gradle
@@ -50,6 +50,7 @@ dependencies {
     compile("org.springframework.boot:spring-boot-starter-actuator")
     compile("org.springframework.cloud:spring-cloud-starter-config")
     compile("org.springframework.cloud:spring-cloud-starter-kubernetes")
+    compile("org.springframework.cloud:spring-cloud-starter-kubernetes-ribbon")
     compile('org.springframework.cloud:spring-cloud-starter-netflix-zuul')
     compile("org.springframework.cloud:spring-cloud-starter-sleuth")
     compile("org.springframework.cloud:spring-cloud-starter-zipkin")
