Added support for kubernetes service discovery

--- a/thule-admin-service/src/main/resources/bootstrap.yml
+++ b/thule-admin-service/src/main/resources/bootstrap.yml
@@ -13,3 +13,8 @@ spring:
         initialInterval: 3000
       # Location of the configuration service
       uri: http://${thule.configurationservice.host:thule-configuration-service}:${thule.configurationservice.port:8080}/
+    kubernetes:
+      reload:
+        enabled: true
+        mode: polling
+        period: 5000
