--- a/thule-admin-service/src/main/resources/config/application.yml
+++ b/thule-admin-service/src/main/resources/config/application.yml
@@ -23,6 +23,12 @@ management:
 spring:
   application:
     name: thule-admin-service
+  boot:
+    admin:
+      monitor:
+        status-interval: 5000ms
+        status-lifetime: 5000ms
+        read-timeout: 5000ms
   cloud:
     kubernetes:
       discovery:
