Added support for kubernetes service discovery

--- a/thule-admin-service/src/main/resources/bootstrap-cit.yml
+++ b/thule-admin-service/src/main/resources/bootstrap-cit.yml
@@ -3,6 +3,6 @@ spring:
   cloud:
     config:
       enabled: true
-    kubernetes:
-      discovery:
-        enabled: true
+#    kubernetes:
+#      discovery:
+#        enabled: true
