--- a/thule-admin-service/src/main/resources/config/application.yml
+++ b/thule-admin-service/src/main/resources/config/application.yml
@@ -23,26 +23,16 @@ management:
 spring:
   application:
     name: thule-admin-service
-  boot:
-    admin:
-      monitor:
-        status-interval: 5000ms
-        status-lifetime: 5000ms
-        read-timeout: 5000ms
-#    kubernetes:
-#      discovery:
-#        enabled: true
-#        catalog-services-watch:
-#          enabled: true
-#          catalogServicesWatchDelay: 10000
+##  boot:
+#    admin:
+##      monitor:
+#        status-interval: 5000ms
+#        status-lifetime: 5000ms
+#        read-timeout: 5000ms
   cloud:
     kubernetes:
       discovery:
         enabled: false
-#      reload:
-#        enabled: true
-#        mode: polling
-#        period: 5000
   sleuth:
     sampler:
       probability: 1.0
